[gd_scene load_steps=8 format=3 uid="uid://cw10gr4g2ksl1"]

[ext_resource type="Script" uid="uid://bjfaksx4uryrk" path="res://Graphic Elements/Shop/shop_window.gd" id="2_dv2xx"]
[ext_resource type="PackedScene" uid="uid://cb0xb20pk0mpa" path="res://Images/SpriteSheets/sprite.tscn" id="3_62aoc"]
[ext_resource type="Texture2D" uid="uid://bbu6yyaigk85r" path="res://Images/Sprites/pebble.png" id="4_dv2xx"]
[ext_resource type="Theme" uid="uid://bo4k256bjm6uu" path="res://Graphic Elements/Themes/mainTab_alt.tres" id="5_5nuvd"]
[ext_resource type="PackedScene" uid="uid://72phavhx5xni" path="res://Screens/GameScreen/Tabs/EquipmentTab/equipment_details_binary_choice.tscn" id="5_juvjr"]
[ext_resource type="FontFile" uid="uid://dps60a85iv5xv" path="res://Images/CC0 Assets/Kenney Pixel.ttf" id="6_juvjr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dv2xx"]
bg_color = Color(0, 0, 0, 0.380392)

[node name="ShopWindow" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dv2xx")
script = ExtResource("2_dv2xx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="CurrencyDisplay" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("5_5nuvd")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CurrencyDisplay"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Count" type="RichTextLabel" parent="VBoxContainer/CurrencyDisplay/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
text = " Your currency amount "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Icon" parent="VBoxContainer/CurrencyDisplay/HBoxContainer" instance=ExtResource("3_62aoc")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Icon" parent="VBoxContainer/CurrencyDisplay/HBoxContainer/Icon" index="0"]
scale = Vector2(4, 4)
texture = ExtResource("4_dv2xx")
region_rect = Rect2(0, 0, 16, 16)

[node name="Shop" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_5nuvd")
theme_override_constants/separation = 15

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("5_5nuvd")
theme_override_font_sizes/font_size = 30
text = "       Exit Shop       "

[node name="detailsRight" parent="." instance=ExtResource("5_juvjr")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.12
anchor_bottom = 0.9
offset_right = -15.0
spriteScale = 10

[node name="HBoxContainer" parent="detailsRight/Text/VBoxContainer" index="3"]
visible = false

[node name="Option0" parent="detailsRight/Text/VBoxContainer/HBoxContainer2/CenterContainer0" index="0"]
text = " Purchase "

[node name="Option1" parent="detailsRight/Text/VBoxContainer/HBoxContainer2/CenterContainer1" index="0"]
text = " Cancel "

[node name="detailsLeft" parent="." instance=ExtResource("5_juvjr")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.12
anchor_right = 0.5
anchor_bottom = 0.9
offset_left = 15.0
spriteScale = 10

[node name="HBoxContainer" parent="detailsLeft/Text/VBoxContainer" index="3"]
visible = false

[node name="Option0" parent="detailsLeft/Text/VBoxContainer/HBoxContainer2/CenterContainer0" index="0"]
text = " Purchase "

[node name="Option1" parent="detailsLeft/Text/VBoxContainer/HBoxContainer2/CenterContainer1" index="0"]
text = " Cancel "

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.025
anchor_right = 0.5
anchor_bottom = 0.025
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("6_juvjr")
theme_override_font_sizes/normal_font_size = 130
text = "THE CROW'S NEST"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="optionPressed" from="detailsRight" to="." method="_on_details_option_pressed"]
[connection signal="optionPressed" from="detailsLeft" to="." method="_on_details_option_pressed"]

[editable path="VBoxContainer/CurrencyDisplay/HBoxContainer/Icon"]
[editable path="detailsRight"]
[editable path="detailsRight/Picture/CenterContainer/Sprite"]
[editable path="detailsLeft"]
[editable path="detailsLeft/Picture/CenterContainer/Sprite"]
